--- a/app/src/main/res/layout/activity_info2.xml
+++ b/app/src/main/res/layout/activity_info2.xml
@@ -25,12 +25,11 @@
             android:layout_height="280dp"
             android:layout_margin="5dp"
             android:layout_marginStart="24dp"
-            android:layout_marginLeft="24dp"
             android:layout_marginTop="4dp"
             android:fontFamily="sans-serif"
             android:shadowColor="#000000"
             android:text="Solo debes ingresar tu nombre, apellidos y tu fecha de nacimiento en el siguiente formulario."
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:textSize="36sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.84"
