--- a/app/src/main/res/layout/lista_rne.xml
+++ b/app/src/main/res/layout/lista_rne.xml
@@ -34,10 +34,10 @@
                 android:layout_gravity="center"
                 android:paddingLeft="14dp"
                 android:paddingRight="14dp"
+                android:tint="@color/black"
                 app:srcCompat="@drawable/copyblue"
-                tools:ignore="VectorDrawableCompat"
 
-                />
+                tools:ignore="VectorDrawableCompat" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -55,17 +55,16 @@
                     android:layout_width="198dp"
                     android:layout_height="wrap_content"
                     android:text="@string/rne"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="20dp" />
 
                 <TextView
                     android:id="@+id/Nombre"
                     android:layout_width="197dp"
                     android:layout_height="match_parent"
-                    android:textColor="@color/white"
-                    android:textSize="20dp"
                     android:text="@string/carlos_mejia"
-                    />
+                    android:textColor="@color/black"
+                    android:textSize="20dp" />
             </LinearLayout>
 
         </RelativeLayout>
