Anuncios de prueba...

--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
     tools:context=".formulario">
 
@@ -31,6 +32,13 @@
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/Theme.RNEGEN.PopupOverlay" />
 
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/adView"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/bannerejemplo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -42,11 +50,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:contentDescription="@string/_10_10_2001"
         app:backgroundTint="#00B0FF"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
         app:rippleColor="#FFFFFF"
-        app:srcCompat="@android:drawable/ic_dialog_info"
-        android:layout_marginRight="@dimen/fab_margin" />
+        app:srcCompat="@android:drawable/ic_dialog_info" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
