--- a/app/src/main/res/layout/activity_info1.xml
+++ b/app/src/main/res/layout/activity_info1.xml
@@ -29,7 +29,7 @@
             android:fontFamily="sans-serif"
             android:shadowColor="#000000"
             android:text="@string/tut1"
-            android:textColor="#FFFFFF"
+            android:textColor="#0288D1"
             android:textSize="36sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.84"
