--- a/app/src/main/res/layout/lista_rne.xml
+++ b/app/src/main/res/layout/lista_rne.xml
@@ -34,9 +34,9 @@
                 android:layout_gravity="center"
                 android:paddingLeft="14dp"
                 android:paddingRight="14dp"
-                android:tint="@color/black"
-                app:srcCompat="@drawable/copyblue"
+                android:tint="@color/teal_700"
 
+                app:srcCompat="@drawable/copyblue"
                 tools:ignore="VectorDrawableCompat" />
 
             <LinearLayout
@@ -55,7 +55,7 @@
                     android:layout_width="198dp"
                     android:layout_height="wrap_content"
                     android:text="@string/rne"
-                    android:textColor="#6A6A6A"
+                    android:textColor="@color/teal_700"
                     android:textSize="20dp" />
 
                 <TextView
@@ -63,7 +63,7 @@
                     android:layout_width="197dp"
                     android:layout_height="match_parent"
                     android:text="@string/carlos_mejia"
-                    android:textColor="#6A6A6A"
+                    android:textColor="@color/teal_700"
                     android:textSize="20dp" />
             </LinearLayout>
 
