Se agrego: Opcion para abrir informacion de RNE en otra actividad. No se podra agregar un RNE que ya esta en la DB
Esta completado
interfaz de RNE que se pueda eliminar, compartir, y buscar RNE en las pruebas nacionales, este solo seria posible con un token de Captcha pero no sabria como hacerlo dx

--- a/app/src/main/res/layout/lista_rne.xml
+++ b/app/src/main/res/layout/lista_rne.xml
@@ -36,7 +36,7 @@
                 android:paddingRight="14dp"
                 android:tint="@color/teal_700"
 
-                app:srcCompat="@drawable/copyblue"
+                app:srcCompat="@drawable/baseline_account_circle_64"
                 tools:ignore="VectorDrawableCompat" />
 
             <LinearLayout
