--- a/app/src/main/res/layout/activity_rnedetail.xml
+++ b/app/src/main/res/layout/activity_rnedetail.xml
@@ -32,8 +32,10 @@
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/Theme.RNEGEN.PopupOverlay" />
+
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
+
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -44,10 +46,12 @@
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginRight="@dimen/fab_margin"
         android:contentDescription="@string/_10_10_2001"
-        app:backgroundTint="#00B0FF"
+        android:soundEffectsEnabled="true"
+        app:backgroundTint="#0B3243"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
         app:rippleColor="#FFFFFF"
-        app:srcCompat="@android:drawable/ic_dialog_info" />
+        app:srcCompat="@drawable/baseline_arrow_back_24" />
 
+    <include layout="@layout/rnedetailscroll"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
